Add auth server status

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+endcube.service.veloren.game.server.url=http://veloren.endcube.net:14005/metrics
+endcube.service.veloren.auth.server.url=https://auth.veloren.net/ping
