Add Redis and scheduling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
-endcube.service.veloren.game.server.url=http://veloren.endcube.net:14005/metrics
-endcube.service.veloren.auth.server.url=https://auth.veloren.net/ping
+spring.data.redis.host=${REDISHOST}
+spring.data.redis.port=${REDISPORT}
+spring.data.redis.username=${REDISPORT}
+spring.data.redis.password=${REDISPASSWORD}
+spring.data.redis.database=0
+
+endcube.service.veloren.game.server.url=${VELOREN_GAME_SERVER_URL}
+endcube.service.veloren.auth.server.url=${VELOREN_AUTH_SERVER_URL}
