--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.data.redis.host=${REDISHOST}
 spring.data.redis.port=${REDISPORT}
-spring.data.redis.username=${REDISPORT}
+spring.data.redis.username=${REDISUSER}
 spring.data.redis.password=${REDISPASSWORD}
 spring.data.redis.database=0
 
